--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   get_it: ^7.6.6
   flutter_bloc: ^8.1.3
   equatable: ^2.0.5
+  url_launcher: ^6.2.3
 
 dev_dependencies:
   flutter_test:
@@ -65,8 +66,6 @@ flutter:
   assets:
     - assets/
     - assets/images/
-    - assets/fonts/
-    - assets/icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
