--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,11 @@ dependencies:
   flutter_bloc: ^8.1.3
   equatable: ^2.0.5
   url_launcher: ^6.2.3
+  image_picker: ^1.0.7
+  # http: ^1.1.2
+  # html: ^0.15.4
+  # any_link_preview: ^3.0.1
+  # flutter_webview_plugin: ^0.4.0
 
 dev_dependencies:
   flutter_test:
