--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,10 +43,8 @@ dependencies:
   equatable: ^2.0.5
   url_launcher: ^6.2.3
   image_picker: ^1.0.7
-  # http: ^1.1.2
-  # html: ^0.15.4
-  # any_link_preview: ^3.0.1
-  # flutter_webview_plugin: ^0.4.0
+  flutter_image_compress: ^2.1.0
+  path: any
 
 dev_dependencies:
   flutter_test:
