--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -3,11 +3,11 @@
 <plist version="1.0">
 <dict>
     <key>NSPhotoLibraryUsageDescription</key>
-    <string>This app requires access to the photo library.</string>
+    <string>Приложение требует предоставить доступ к галерее</string>
     <key>NSMicrophoneUsageDescription</key>
-    <string>This app does not require access to the microphone.</string>
+    <string>Приложение не требует доступа к микрофону</string>
     <key>NSCameraUsageDescription</key>
-    <string>This app requires access to the camera.</string>
+    <string>Приложение требует предоставить доступ к камере</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
